@@ -95,7 +95,7 @@ void dlr_shutdown(void);
 /* 
  * Add a new entry to the list
  */
-void dlr_add(const Octstr *smsc, const Octstr *ts, const Msg *msg);
+void dlr_add(const Octstr *smsc, const Octstr *ts, Msg *msg);
 
 /* 
  * Find an entry in the list. If there is one a message is returned and 
